# stickee

./: .env.local.example  .gitignore  CONTRIBUTING.md  LICENSE  PHASES_TO_IMPLEMENT.md  PLAN.md  README.md  ROADMAP.md  ROADMAP.txt  SECURITY.md  TERMS_OF_SERVICE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  site.webmanifest  sync_database_schema.sql  tailwind.config.ts  terms.md  tsconfig.app.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1784905776373-8dec208b24825.mjs
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: build.yml  dependabot-auto-merge.yml  dependabot.yml  windows-build.yml
.windsurf/rules/: no-code-snippets.md
dist-electron/: main.js  preload.js
docs/: POSTHOG_INTEGRATION.md
early_versions/: v0.0.3.md  v0.0.4.md  v0.1.0.md  v1.0.0.md  v2.0.0.md
electron/: main.ts  preload.ts
public/: TERMS_OF_SERVICE.md  robots.txt  sitemap.xml
src/: App.tsx  electron.d.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddNoteButton.module.css  AddNoteButton.tsx  AddNoteDialog.tsx  AppSidebar.tsx  ArchivedNotesDialog.tsx  Auth.tsx  AutomationBuilderDialog.tsx  AutomationsPanel.tsx  Checklist.tsx  EmojiPicker.tsx  IssueReportButton.tsx  IssueReportDialog.tsx  KanbanBoard.tsx  LinkableText.tsx  MarkdownContent.tsx  MarkdownEditor.tsx  MassDeleteDialog.tsx  QuickNote.tsx  (+19 more)
versions/: v0.0.1.md  v0.0.2.md  v0.1.4
(+50 files in other folders)
