[package]
name = "app"
version = "1.1.0"
description = "A Tauri App"
authors = ["slammers001"]
license = "MIT"
repository = "slammers001/stickee"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
log = { version = "0.4", default-features = false }
tauri = { version = "2.9.5", features = ["rustls-tls", "wry"], default-features = false }
tauri-plugin-log = { version = "2", features = ["colored"], default-features = false }
tauri-plugin-shell = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
